# taxonomy-connector

./: .coveragerc  .gitignore  .pii_annotations.yml  .travis.yml  CHANGELOG.rst  MANIFEST.in  Makefile  README.rst  catalog-info.yaml  manage.py  pylintrc  pylintrc_tweaks  pyproject.toml  setup.cfg  setup.py  test_settings.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  mysql8-migrations.yml  pypi-publish.yml  release.yml  upgrade-python-requirements.yml
docs/: conf.py  index.rst  internationalization.rst
docs/decisions/: 0001-xblock-skill-tagging-design.rst
requirements/: base.in  base.txt  ci.in  ci.txt  constraints.txt  dev.in  dev.txt  doc.txt  pip-tools.txt  pip.txt  test.in  test.txt  travis.txt
src/taxonomy/: __init__.py  admin.py  enums.py  models.py  tasks.py  translation_utils.py
src/taxonomy/algolia/: __init__.py
src/taxonomy/api/: permissions.py
src/taxonomy/migrations/: 0004_auto_20210113_0452.py  0005_blacklistedcourseskill.py  0006_auto_20210128_0135.py  0015_auto_20211022_1138.py  0020_programskill.py  0025_industry.py  0027_auto_20221117_0746.py  (+3 more)
taxonomy/: __init__.py  admin.py  apps.py  choices.py  constants.py  emsi_client.py  enums.py  exceptions.py  forms.py  migrations_utils.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
taxonomy/algolia/: client.py  constants.py  serializers.py  utils.py
taxonomy/api/: filters.py  urls.py
taxonomy/api_client/: discovery.py
taxonomy/contentful/: __init__.py  contentful_courses.py  contentful_subjects.py
taxonomy/discovery/: __init__.py  discovery_courses.py  discovery_subjects.py  utils.py
taxonomy/emsi/: client.py
taxonomy/management/: command_utils.py
taxonomy/migrations/: 0001_initial.py  0002_job_jobskills.py  0003_auto_20200916_1019.py  0007_delete_all_records.py  0008_auto_20210216_0710.py  0009_skill_description.py  0010_auto_20210305_0914.py  0010_auto_20210409_0256.py  0011_auto_20210412_0241.py  0012_auto_20210412_0424.py  0013_remove_courseskills_course_id.py  0014_auto_20210416_0548.py  0016_translation.py  0017_auto_20220214_0214.py  0018_auto_20220613_0249.py  0019_auto_20220622_0059.py  0020_programskill.py  0021_recreate_programskill.py  0022_auto_20220825_0206.py  0023_refreshprogramskillsconfig.py  0024_alter_refreshprogramskillsconfig_options.py  0025_industry.py  0026_auto_20221101_0936.py  0027_auto_20221117_0746.py  0028_xblock_skills.py  0029_xblock_refresh_argmuments_table.py  0030_alter_skillsquiz_skills.py  0031_auto_20230417_1557.py  0032_auto_20230508_1428.py  0033_auto_20230614_1246.py  0033_b2c_allowlist.py  0034_alter_xblockskills_usage_key.py  0035_auto_20231013_0324.py  0036_auto_20240325_1631.py  0038_mariadb_uuid_conversion.py  0039_taxonomytranslation.py
taxonomy/openai/: client.py
taxonomy/providers/: __init__.py  course_metadata.py  course_run_metadata.py  program.py  program_metadata.py  utils.py  xblock_metadata.py
taxonomy/signals/: handlers.py  signals.py
taxonomy/tests/: test_algolia_translations.py  test_populate_taxonomy_translations.py
taxonomy/validators/: __init__.py  course_metadata.py  course_run_metadata.py  program.py  program_metadata.py  xblock_metadata.py
test_utils/: constants.py  decorators.py  factories.py  mocks.py  providers.py  testcase.py
test_utils/sample_responses/: job_lookup.py  job_postings.py  jobs.py  salaries.py  skills.py
tests/: conftest.py  test_api_v1.py  test_apps.py  test_choices.py  test_emsi_client.py  test_forms.py  test_migrations_utils.py  test_models.py  test_permissions.py  test_signals.py  test_tasks.py  test_urls.py  test_utilities.py  test_validators.py  test_views.py
tests/algolia/: test_client.py  test_serializers.py  test_utils.py
tests/emsi/: test_client.py
tests/management/: test_fetch_skill_details.py  test_finalize_xblockskill_tags.py  test_generate_job_descriptions.py  test_populate_job_names.py  test_refresh_course_skills.py  test_refresh_job_postings_data.py  test_refresh_job_skills.py  test_refresh_program_skills.py  test_refresh_xblock_skills.py  test_reindex_algolia.py
tests/openai/: test_client.py
(+28 files in other folders)
